@@ -1,8 +1,9 @@
 package com.test.bytebuddy.agent.intercept;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.function.Function;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import net.bytebuddy.ByteBuddy;
 import net.bytebuddy.implementation.MethodDelegation;
@@ -12,7 +13,7 @@ public class MethodInterceptorTest {
 
     @Test
     @SuppressWarnings({"rawtypes", "unchecked"})
-    public void simpleTest() throws IllegalAccessException, InstantiationException {
+    public void simpleTest() throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         Class<? extends Function> dynamicType = new ByteBuddy()
                 .subclass(Function.class)
                 .method(ElementMatchers.named("apply"))
@@ -21,12 +22,12 @@ public class MethodInterceptorTest {
                 .load(Thread.currentThread().getContextClassLoader())
                 .getLoaded();
 
-        System.out.println(dynamicType.newInstance().apply("Byte Buddy"));
+        System.out.println(dynamicType.getDeclaredConstructor().newInstance().apply("Byte Buddy"));
     }
 
     @Test
     @SuppressWarnings({"rawtypes", "unchecked"})
-    public void complexTest() throws IllegalAccessException, InstantiationException {
+    public void complexTest() throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         Class<? extends Function> dynamicType = new ByteBuddy()
                 .subclass(Function.class)
                 .method(ElementMatchers.named("apply"))
@@ -35,11 +36,11 @@ public class MethodInterceptorTest {
                 .load(Thread.currentThread().getContextClassLoader())
                 .getLoaded();
 
-        System.out.println(dynamicType.newInstance().apply("Byte Buddy"));
+        System.out.println(dynamicType.getDeclaredConstructor().newInstance().apply("Byte Buddy"));
     }
 
     @Test
-    public void complex2Test() throws IllegalAccessException, InstantiationException {
+    public void complex2Test() throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         Class<?> dynamicType = new ByteBuddy()
                 .subclass(Object.class)
                 .method(ElementMatchers.named("toString"))
@@ -48,6 +49,6 @@ public class MethodInterceptorTest {
                 .load(Thread.currentThread().getContextClassLoader())
                 .getLoaded();
 
-        System.out.println(dynamicType.newInstance().toString());
+        System.out.println(dynamicType.getDeclaredConstructor().newInstance().toString());
     }
 }
